# Perch

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRONTEND_BRIEF.md  GETTING_STARTED.md  NOTICE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  install.sh  perch.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
design/: README.md
design/perch_command_interface/: DESIGN.md
design/perch_drift_audit/: code.html
design/perch_drift_audit_remix/: code.html
design/perch_service_detail_remix/: code.html
design/perch_topology_remix/: code.html
docs/: GRADUATE_TO_A_VM.md  RESEARCH_windows-intranet-sharing.md
docs/sprints/: windows-intranet-sharing.md
examples/hello-web/: Dockerfile  index.html
examples/secure-agent/: README.md  perch.yaml
examples/secure-agent/assistant/: Dockerfile  agent.py
perch/: __init__.py  api.py  attest.py  audit.py  backend.py  backups.py  broker.py  catalog.py  cli.py  crypto.py  dataplane.py  docker_backend.py  egress.py  gateway.py  identity.py  manifest.py  mcp.py  mdns.py  mediation.py  memory.py  proxy.py  reconcile.py  share.py  state.py  supplychain.py
perch/web/: index.html
tests/: compose_e2e.py  docker_gateway_check.py  e2e_gateway.py  test_reconcile.py  windows_share_check.py
