[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "perch-host"
dynamic = ["version"]
description = "A tiny self-hosted control plane for hosting your own apps and agents on Docker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "sknib1337" }]
dependencies = ["pyyaml>=6.0"]
keywords = ["self-hosted", "orchestration", "docker", "deploy", "agents", "gitops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/sknib1337/Perch"
Repository = "https://github.com/sknib1337/Perch"
Issues = "https://github.com/sknib1337/Perch/issues"

[project.scripts]
perch = "perch.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]

[tool.setuptools.dynamic]
version = { attr = "perch.__version__" }

[tool.setuptools.packages.find]
include = ["perch*"]

[tool.setuptools.package-data]
perch = ["web/*.html", "web/*.css", "web/*.js"]
